# health-tracker-api

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.ai/: code-review-subagent.agent.md  conductor.agent.md  implement-subagent.agent.md  planning-subagent.agent.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  models.py  validate.py
app/routes/: auth.py  entries.py
app/static/: styles.css  styles.scss
app/static/css/: styles.css.map
app/static/js/: chart.js  datepicker.js
app/static/scss/: styles.scss
app/templates/: base.html  forgot_password.html  goals.html  greet.html  history.html  home.html  index.html  login.html  macros.html  measurements.html  reset_password.html  settings.html  signup.html  stitch.html  test.html
migrations/versions/: 49022067d1ac_increase_password_column_length.py  a16d526c742e_add_measurements_table.py  a30a05301cef_add_email_to_users.py  b1c4e7a2f093_add_weekly_loss_pct_to_goals.py  f5b70e20561d_baseline.py
tests/: _test__.py  conftest.py  test_app.py
